--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - mongodb
       - rag_api
     image: ghcr.io/danny-avila/librechat-dev:latest
+    args:
+      - UID=${UID}
+      - GID=${GID}
     restart: always
     user: "${UID}:${GID}"
     extra_hosts:
