--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - rag_api
     image: ghcr.io/danny-avila/librechat-dev:latest
     restart: always
-    # user: "${UID}:${GID}"
+    user: "${UID}:${GID}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
