--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -9,6 +9,7 @@ RUN npm config set fetch-retry-maxtimeout 600000 && \
     npm config set fetch-retries 5 && \
     npm config set fetch-retry-mintimeout 15000
 COPY package*.json ./
+COPY librechat.yaml ./
 COPY packages/data-provider/package*.json ./packages/data-provider/
 COPY packages/mcp/package*.json ./packages/mcp/
 COPY client/package*.json ./client/
